# opensailor

./: .env.example  .gitignore  .pylintrc  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/: test.env
.github/workflows/: deploy.yml  drift.yml  format.yml  lint.yml  test.yml
app/: collectstatic_settings.py  input.css  manage.py  package-lock.json  package.json  pyproject_collectstatic.toml  tailwind.config.js
app/templates/account/: base.html  login.html  signup.html
app/templates/socialaccount/: signup.html
app/webapp/: admin.py  api.py  context_processors.py  decorators.py  logging.py  settings.py  test_settings.py  urls.py  views.py
app/webapp/controllers/: vessels.py
app/webapp/migrations/: 0001_initial.py  0002_designer_make_property_sailboat_sailboatproperty_and_more.py  0003_attribute_sailboatattribute_and_more.py  0004_alter_attribute_input_type.py  0005_media_sailboat_photos.py  0006_remove_sailboat_photos_sailboatimage_sailboat_images_and_more.py  0007_sailboatgroupobjectpermission_and_more.py  0008_vessel_home_port.py  0009_vesselnote.py  0010_vessel_uscg_number.py  0011_auto_20250517_0259.py  0012_attributesection.py  0013_auto_20250517_0421.py  0014_attribute_section.py  0015_attribute_accepts_contributions_attribute_data_type_and_more.py  0016_remove_vesselnote_content_vesselnote_shared_with_and_more.py  0017_alter_vessel_uscg_number.py  0018_vesselaccessrequest_vesselgroupobjectpermission_and_more.py  (+2 more)
app_startup/: development.sh  production.sh
client_side_js/: package-lock.json  package.json  vite.config.js
client_side_js/assets/: main-DJ5Nf2Ew.js
client_side_js/src/: htmx.js  main.js
db_startup/: development-initdb.sh  production-initdb.sh
dockerfiles/: app.Dockerfile  db_startup.Dockerfile  nginx.Dockerfile
nginx/: development.conf  production.conf
opentofu/: .gitkeep  .terraform.tfstate.lock.info  acm.tf  alb.tf  backend.tf  cloudflare.tf  ecr.tf  ecs.tf  export-ecs-task-def.sh  github-oidc.tf  main.tf  outputs.tf  rds.tf  s3-backend-resources.tf  s3.tf  security.tf  variables.tf  versions.tf  vpc.tf
static/: attribute_template.csv  output.css
static/libraries/: main.js
tests/: conftest.py  test_responsive_images.py  test_tests.py
(+64 files in other folders)
